tuptime (5.0.0) unstable; urgency=low

  * Abbreviate format in time counters
  * Identify new startups with boot_id
  * Adding -b, --bootid option to show boot IDs
  * Adding -i, --invert option to show startup number in reverse count
  * Change database specs. Add bootid column
  * After a graceful shutdown register, delay 5 seconds next DB update
  * Large refactoring
  * Update .deb package

 -- Ricardo Fraile <rfraile@rfraile.eu>  Sat, 28 Mar 2020 01:27:00 +0100

tuptime (4.1.0) unstable; urgency=low

  * Register shutdowns lower than a second
  * Adding option -A --at
  * Refactoring --tat output
  * Rename suspend time to sleep time

 -- Ricardo Fraile <rfraile@rfraile.eu>  Wed, 01 Jan 2020 17:03:00 +0100

tuptime (4.0.0) unstable; urgency=low

  * Adding support for running and suspended time. (-p, --power)
  * Adding --tat to report system state at specific timestamp.
  * Change database specs. Add rntime and spdtime columns.
  * Update .deb package

 -- Ricardo Fraile <rfraile@rfraile.eu>  Sun, 28 Jul 2019 20:12:00 +0100

tuptime (3.5.0) unstable; urgency=low

  * Avoid execution if the startup date is prior to 01/Jan/2000 00:00
  * Avoid correct drift when it decreases uptime under 0
  * Fix register shutdown with negative downtime
  * Minnor code refactoring

 -- Ricardo Fraile <rfraile@rfraile.eu>  Wed, 20 Feb 2019 17:02:00 +0100

tuptime (3.4.2) unstable; urgency=low

  * Fix Debian Bug Fails to upgrade (Closes: #914954)
  * Change deb architecture from any to all

 -- Ricardo Fraile <rfraile@rfraile.eu>  Fri, 07 Dec 2018 15:48:00 +0100

tuptime (3.4.1) unstable; urgency=low

  * Adding Launchd .plist
  * Code quality checker fixes
  * Update .deb package
  * Adding Uptimed migration script
  * Fix Debian Bug about real time definition (Closes: #912996)

 -- Ricardo Fraile <rfraile@rfraile.eu>  Fri, 23 Nov 2018 21:16:00 +0100

tuptime (3.4.0) unstable; urgency=low

  * Adding DragonflyBSD, OpenBSD and NetBSD support