@@ -2,7 +2,7 @@
 
 name='tuptime'
 command='/usr/bin/tuptime'
-command_user='tuptime'
+command_user='_tuptime'
 command_args='-x'
 
 depend() {
