@@ -6,7 +6,7 @@ Wants=time-sync.target
 
 [Service]
 Type=oneshot
-User=tuptime
+User=_tuptime
 RemainAfterExit=true
 ExecStart=/usr/bin/tuptime -x
 ExecStop=/usr/bin/tuptime -xg
