@@ -124,9 +124,9 @@ echo "+ Creating Tuptime execution user '_tuptime'"
 useradd -h > /dev/null 2>&1
 if [ $? -eq 0 ]; then
 	useradd --system --no-create-home --home-dir '/var/lib/tuptime' \
-        	--shell '/bin/false' --comment 'Tuptime execution user' "$EXUSR"
+        	--shell '/bin/false' --comment 'Tuptime execution user' "${EXUSR}"
 else
-	adduser -S -H -h '/var/lib/tuptime' -s '/bin/false' "$EXUSR"
+	adduser -S -H -h '/var/lib/tuptime' -s '/bin/false' "${EXUSR}"
 fi
 echo '  [OK]'
 
@@ -135,12 +135,12 @@ tuptime -x
 echo '  [OK]'
 
 echo "+ Setting Tuptime db ownership"
-chown -R "$EXUSR":"$EXUSR" /var/lib/tuptime || exit
+chown -R "${EXUSR}":"${EXUSR}" /var/lib/tuptime || exit
 chmod 755 /var/lib/tuptime || exit
 echo '  [OK]'
 
 echo "+ Executing Tuptime with '_tuptime' user for testing"
-su -s /bin/sh "$EXUSR" -c "tuptime -x" || exit
+su -s /bin/sh "${EXUSR}" -c "tuptime -x" || exit
 echo '  [OK]'
 
 # Install init
