@@ -6,10 +6,11 @@ tuptime (5.0.0) unstable; urgency=low
   * Adding -i, --invert option to show startup number in reverse count
   * Change database specs. Add bootid column
   * After a graceful shutdown register, delay 5 seconds next DB update
+  * Change execution user from 'tuptime' to '_tuptime'
   * Large refactoring
   * Update .deb package
 
- -- Ricardo Fraile <rfraile@rfraile.eu>  Sat, 28 Mar 2020 01:27:00 +0100
+ -- Ricardo Fraile <rfraile@rfraile.eu>  Tue, 26 May 2020 19:58:00 +0100
 
 tuptime (4.1.0) unstable; urgency=low
 
